small additions, add Ludewig ref

--- a/qft-geometry.bib
+++ b/qft-geometry.bib
@@ -361,19 +361,18 @@
 }
 
 @Article{Alvarez-Gaume1983b,
-  author        = {Alvarez-Gaume, Luis},
-  title         = {{Supersymmetry and the Atiyah-Singer Index Theorem}},
-  journal       = {Commun. Math. Phys.},
-  year          = {1983},
-  volume        = {90},
-  pages         = {161},
-  __markedentry = {[andy:]},
-  booktitle     = {{MATHEMATICAL PHYSICS VII. PROCEEDINGS, 7TH INTERNATIONAL CONGRESS, BOULDER, USA, AUGUST 1-10, 1983}},
-  doi           = {10.1007/BF01205500},
-  owner         = {andy},
-  reportnumber  = {Print-83-0368-Rev.(PRINCETON), HUTP-83/A031a},
-  slaccitation  = {%%CITATION = CMPHA,90,161;%%},
-  timestamp     = {2017.09.16},
+  author       = {Alvarez-Gaume, Luis},
+  title        = {{Supersymmetry and the Atiyah-Singer Index Theorem}},
+  journal      = {Commun. Math. Phys.},
+  year         = {1983},
+  volume       = {90},
+  pages        = {161},
+  booktitle    = {{MATHEMATICAL PHYSICS VII. PROCEEDINGS, 7TH INTERNATIONAL CONGRESS, BOULDER, USA, AUGUST 1-10, 1983}},
+  doi          = {10.1007/BF01205500},
+  owner        = {andy},
+  reportnumber = {Print-83-0368-Rev.(PRINCETON), HUTP-83/A031a},
+  slaccitation = {%%CITATION = CMPHA,90,161;%%},
+  timestamp    = {2017.09.16},
 }
 
 @Article{MR1698956,
@@ -396,7 +395,7 @@
 @Article{Baer2007,
   author        = {Christian Baer and Frank Pfaeffle},
   title         = {Path integrals on manifolds by finite dimensional approximation},
-  __markedentry = {[andy:6]},
+  __markedentry = {[andy:]},
   abstract      = {Let M be a compact Riemannian manifold without boundary and let H be a self-adjoint generalized Laplace operator acting on sections in a bundle over M. We give a path integral formula for the solution to the corresponding heat equation. This is based on approximating path space by finite dimensional spaces of geodesic polygons. We also show a uniform convergence result for the heat kernels. This yields a simple and natural proof for the Hess-Schrader-Uhlenbrock estimate and a path integral formula for the trace of the heat operator.},
   date          = {2007-03-09},
   doi           = {10.1515/CRELLE.2008.089},
@@ -418,7 +417,7 @@
   volume        = {179},
   series        = {Pitman Research Notes in Mathematics Series},
   isbn          = {0-582-01858-7},
-  __markedentry = {[andy:6]},
+  __markedentry = {[andy:]},
   keywords      = {58G10 (58G11)},
   mrnumber      = {960889},
   pages         = {x+184},
@@ -432,10 +431,23 @@
   series        = {Grundlehren Text Editions},
   isbn          = {3-540-20062-2},
   note          = {Corrected reprint of the 1992 original},
-  __markedentry = {[andy:6]},
+  __markedentry = {[andy:]},
   keywords      = {58J35 (35K05 35Q40 47G30 58J60)},
   mrnumber      = {2273508},
   pages         = {x+363},
+}
+
+@Article{Ludewig2016,
+  author        = {Matthias Ludewig},
+  title         = {Heat Kernel Asymptotics, Path Integrals and Infinite-Dimensional Determinants},
+  __markedentry = {[andy:6]},
+  abstract      = {We investigate the short-time expansion of the heat kernel of a Laplace type operator on a compact Riemannian manifold and show that the lowest order term of this expansion is given by the Fredholm determinant of the Hessian of the energy functional on a space of finite energy paths. This is the asymptotic behavior to be expected from formally expressing the heat kernel as a path integral and then (again formally) using Laplace's method on the integral. We also relate this to the zeta determinant of the Jacobi operator, which is another way to assign a determinant to the Hessian of the energy functional. We consider both the near-diagonal asymptotics as well as the behavior at the cut locus.},
+  date          = {2016-07-20},
+  eprint        = {1607.05891v2},
+  eprintclass   = {math.DG},
+  eprinttype    = {arXiv},
+  file          = {online:http\://arxiv.org/pdf/1607.05891v2:PDF},
+  keywords      = {math.DG, math.AP, math.FA},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
